Feat: Updated and Tested Project Service Swagger Docs
